fixed 'our work' images from going off screen for all devices

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ p, label {
     font-family: 'Barlow', sans-serif;
 }
 
+img {
+    width: 100%;
+}
 /* Navbar */
 .bg-light {
     background-color: white !important;
